--- a/sign-up.html
+++ b/sign-up.html
@@ -118,16 +118,16 @@
                             <div class='splited-col'>
                                 <label>
                                     First Name
-                                    <input type="text" name='first-name' required>
+                                    <input type="text">
                                 </label>
                                 <label>
                                     Last Name
-                                    <input type="text" name='last-name' required>
+                                    <input type="text">
                                 </label>
                             </div>
                             <label>
                                 Email Address
-                                <input type="email" name='email' required>
+                                <input type="email">
                             </label>
                             <div class="splited-col-1-5">
                                 <div class='custom-theme-select__container'>
@@ -151,21 +151,21 @@
                                 </div>
                                 <label>
                                     Phone Number
-                                    <input type="number" name='tel-number' required>
+                                    <input type="number">
                                 </label>
                             </div>
                             <label>
                                 Address
-                                <input type="text" name='address' required>
+                                <input type="text">
                             </label>
                             <label>
                                 Password
-                                <input type="password" class='password-input' name='password' required>
+                                <input type="password" class='password-input'>
                                 <p class='password-input__security-btn'>Show</p>
                             </label>
                             <label>
                                 Confirm Password
-                                <input type="password" class='password-input' name='password' required>
+                                <input type="password" class='password-input'>
                                 <p class='password-input__security-btn'>Show</p>
                             </label>
                             <button class="save-btn main-btn" onclick='redirectPay()'>
@@ -181,11 +181,11 @@
                             <div class='splited-col'>
                                 <label>
                                     Company Name
-                                    <input type="text" name='company-name' required>
+                                    <input type="text">
                                 </label>
                                 <label>
                                     Company Website
-                                    <input type="text" name='company-website'>
+                                    <input type="text">
                                 </label>
                             </div>
                             <div class='custom-theme-select__container'>
@@ -209,16 +209,16 @@
                             </div>
                             <label>
                                 Address
-                                <input type="text" name='address' required>
+                                <input type="text">
                             </label>
                             <label>
                                 Password
-                                <input type="password" class='password-input' name='password' required>
+                                <input type="password" class='password-input'>
                                 <p class='password-input__security-btn'>Show</p>
                             </label>
                             <label>
                                 Confirm Password
-                                <input type="password" class='password-input' name='password' required>
+                                <input type="password" class='password-input'>
                                 <p class='password-input__security-btn'>Show</p>
                             </label>
                             <button class="save-btn main-btn" onclick='redirectPay()'>
