--- a/pay.html
+++ b/pay.html
@@ -178,21 +178,21 @@
                             </p>
                             <label>
                                 Card Holder Name
-                                <input type="text" placeholder="AHMED MAHMOUD" required>
+                                <input type="text" placeholder="AHMED MAHMOUD">
                             </label>
                             <label class='card-number__label'>
                                 Card Number
-                                <input type="text" placeholder="XXXX-XXXX-XXXX-XXXX" class='card-number-input' required>
+                                <input type="text" placeholder="XXXX-XXXX-XXXX-XXXX" class='card-number-input'>
                                 <img src='img/mastercard.svg'>
                             </label>
                             <label class='exp-date__label'>
                                 Expiration Date
-                                <input type="text" placeholder="08/24" class='card-number-date'  required>
+                                <input type="text" placeholder="08/24" class='card-number-date'>
                                 <img src='img/calendar.svg'>
                             </label>
                             <label>
                                 CVV Code
-                                <input type="password" class='password-input cvv-code' placeholder='XXX' required>
+                                <input type="password" class='password-input cvv-code' placeholder='XXX'>
                             </label>
                             <button class="save-btn main-btn">
                                 Save
