Agree policy customization

--- a/sign-up.html
+++ b/sign-up.html
@@ -188,24 +188,30 @@
                                     <input type="text">
                                 </label>
                             </div>
-                            <div class='custom-theme-select__container'>
-                                Country Code
-                                <div class="custom-theme-select">
-                                    <select>
-                                        <option selected name="search-default">
-                                            +44                      
-                                        </option>
-                                        <option>
-                                            +45                         
-                                        </option>
-                                        <option>
-                                            +46
-                                        </option>
-                                        <option>
-                                            +47
-                                        </option>
-                                    </select>
+                            <div class="splited-col-1-5">
+                                <div class='custom-theme-select__container'>
+                                    Country Code
+                                    <div class="custom-theme-select">
+                                        <select>
+                                            <option selected name="search-default">
+                                                +44                      
+                                            </option>
+                                            <option>
+                                                +45                         
+                                            </option>
+                                            <option>
+                                                +46
+                                            </option>
+                                            <option>
+                                                +47
+                                            </option>
+                                        </select>
+                                    </div>
                                 </div>
+                                <label>
+                                    Phone Number
+                                    <input type="number">
+                                </label>
                             </div>
                             <label>
                                 Address
