--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <section class="masonry-gallery" id="masonry-gallery">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 col-6 masonry-gallery__col">
+                <div class="col-sm-4 col-12 masonry-gallery__col">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Vision
                     </h3>
@@ -137,7 +137,7 @@
                     </p>
                     <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
                 </div>
-                <div class="col-md-4 col-6 masonry-gallery__col">
+                <div class="col-sm-4 col-12 masonry-gallery__col">
                     <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Participate
@@ -149,7 +149,7 @@
                         applications
                     </p>
                 </div>
-                <div class="col-md-4 col-6 masonry-gallery__col">
+                <div class="col-sm-4 col-12 masonry-gallery__col">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Exprience
                     </h3>
