--- a/sign-in.html
+++ b/sign-in.html
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <p class="auth-copyright">
+            <p class="auth-copyright position-relative">
                 Copy Rights TWINSOFT 2020, All Rights Reserved
             </p>
         </div>
