--- a/sign-up.html
+++ b/sign-up.html
@@ -80,7 +80,7 @@
     <main class='auth-main sign-up-main'>
         <div class="container">
             <div class="auth-main__row row">
-                <div class="auth-main__row__left-col col-sm-5 col-12">
+                <div class="auth-main__row__left-col col-sm-6 col-12">
                    <h1>Welcome, create new account to join <span>ids </span>club</h1>
                 </div>
                 <div class="auth-main__row__right-col col-sm-6 col-12">
@@ -108,6 +108,9 @@
                             <button class="save-btn main-btn choose-account-btn">
                                 Next
                             </button>
+                            <p class="auth-copyright">
+                                Copy Rights TWINSOFT 2020, All Rights Reserved
+                            </p>
                         </div>
 
                         <!-- INDIVIDUAL SECTION STEP -->
@@ -171,6 +174,9 @@
                             <button class="save-btn main-btn" onclick='redirectPay()'>
                                 Sign Up
                             </button>
+                            <p class="auth-copyright position-relative">
+                                Copy Rights TWINSOFT 2020, All Rights Reserved
+                            </p>
                         </div>
 
                         <!-- CORPORATE SECTION STEP -->
@@ -233,12 +239,11 @@
                             <div class="agree-policy">
                                 By joining, You agree to <a href='javascript:void(0)'>Terms conditions</a> and <a href='javascript:void(0)'>Privacy Policy</a>.
                             </div>
+                            <p class="auth-copyright position-relative">
+                                Copy Rights TWINSOFT 2020, All Rights Reserved
+                            </p>
                             </div>
-
                     </form>
-                    <p class="auth-copyright">
-                        Copy Rights TWINSOFT 2020, All Rights Reserved
-                    </p>
                 </div>
             </div>
         </div>
