--- a/pay.html
+++ b/pay.html
@@ -199,7 +199,7 @@
                             </button>
                             </div>
                     </form>
-                    <p class="auth-copyright">
+                    <p class="auth-copyright position-relative">
                         Copy Rights TWINSOFT 2020, All Rights Reserved
                     </p>
                 </div>
