--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <div class="row">
                 <div class="col-md-5 col-12">
                     <span class="subscribe__span">
-                        First ever engineering club
+                        First ever engineering <strong>Lounge</strong>
                     </span>
                     <h2 class="subscribe__title">
                         Ids at your door step mep consulting service club
