--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <img src="img/christopher-burns-wiu-3-w-99-t-ng-unsplash.png" alt="who we are image">
                 <img src="img/american-public-power-association-f-h-ld-xf-ur-dh-a-unsplash.png" alt="who we are image">
             </div>
+        </div><
     </section>
 
     <!-- MASONRY GALLERY SECTION -->
