--- a/index.html
+++ b/index.html
@@ -452,61 +452,63 @@
     <!-- CONTACT US FOOTER -->
 
     <footer class="footer contact-us">
-        <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-12 contact-us__form-col">
-                    <h1 class="section-title" id='contact-us'>
-                        Contact <span>Us</span>
-                    </h1>
-                    <p class="section-description">
-                        We respond to emails, phone calls and give
-                        solutions that everyone's seek it, keep in touch
-                    </p>
-                    <form action="#">
-                        <label>
-                            Name
-                            <input type="text" name='name' required>
-                        </label>
-                        <label>
-                            Email Address
-                            <input type="email" name='email' required>
-                        </label>
-                        <label>
-                            Mobile Number
-                            <input type="number" name='number'>
-                        </label>
-                        <label>
-                            Message
-                            <textarea name="message" rows="6" required></textarea>
-                        </label>
-                        <button class="contact-us-btn main-btn">
-                            Contact us
-                        </button>
-                    </form>
-                    <p class="privacy-policy__paragraph">
-                        Copy Rights TWINSOFT 2020, All Rights Reserved
-                    </p>
+                    <div class="div">
+                        <h1 class="section-title" id='contact-us'>
+                            Contact <span>Us</span>
+                        </h1>
+                        <p class="section-description">
+                            We respond to emails, phone calls and give
+                            solutions that everyone's seek it, keep in touch
+                        </p>
+                        <form action="#">
+                            <label>
+                                Name
+                                <input type="text" name='name' required>
+                            </label>
+                            <label>
+                                Email Address
+                                <input type="email" name='email' required>
+                            </label>
+                            <label>
+                                Mobile Number
+                                <input type="number" name='number'>
+                            </label>
+                            <label>
+                                Message
+                                <textarea name="message" rows="6" required></textarea>
+                            </label>
+                            <button class="contact-us-btn main-btn">
+                                Contact us
+                            </button>
+                        </form>
+                        <p class="privacy-policy__paragraph">
+                            Copy Rights TWINSOFT 2020, All Rights Reserved
+                        </p>
+                    </div>
                 </div>
                 <div class="col-sm-6 col-12 contact-us__info-col">
-                    <a class="contact-us__block" href='tel:+96789095432'>
-                        <img src="img/phone-call.svg" alt="Contact Us Phone Number">
-                        <p class='pt-4'>Mobile Number</p>
-                        <p>+96789095432</p>
-                    </a>
-                    <a class="contact-us__block" href='mailto:invictus@gmail.com'>
-                        <img src="img/group-74.svg" alt="Contact Us Email">
-                        <p class='pt-4'>Email Address</p>
-                        <p>invictus@gmail.com</p>
-                    </a>
-                    <a class="contact-us__block" href='https://www.google.com/maps/search/Box+No.4325+El-Sheikh+Mohammed+bin+Rashid-Dubai+UAE/@25.0750853,54.947555,10z/data=!3m1!4b1'>
-                        <img src="img/group-75.svg" alt="Contact Us Map">
-                        <p class='pt-4'>Address</p>
-                        <p>Box No.4325 El-Sheikh Mohamed<br>
-                            ben Rashid-Dubai UAE</p>
-                    </a>
+                    <div class="div">
+                        <a class="contact-us__block" href='tel:+96789095432'>
+                            <img src="img/phone-call.svg" alt="Contact Us Phone Number">
+                            <p class='pt-4'>Mobile Number</p>
+                            <p>+96789095432</p>
+                        </a>
+                        <a class="contact-us__block" href='mailto:invictus@gmail.com'>
+                            <img src="img/group-74.svg" alt="Contact Us Email">
+                            <p class='pt-4'>Email Address</p>
+                            <p>invictus@gmail.com</p>
+                        </a>
+                        <a class="contact-us__block" href='https://www.google.com/maps/search/Box+No.4325+El-Sheikh+Mohammed+bin+Rashid-Dubai+UAE/@25.0750853,54.947555,10z/data=!3m1!4b1'>
+                            <img src="img/group-75.svg" alt="Contact Us Map">
+                            <p class='pt-4'>Address</p>
+                            <p>Box No.4325 El-Sheikh Mohamed<br>
+                                ben Rashid-Dubai UAE</p>
+                        </a>
+                    </div>
                 </div>
             </div>
-        </div>
     </footer>
 
     <!-- SCRIPTS -->
