--- a/index.html
+++ b/index.html
@@ -215,6 +215,42 @@
         </div>
     </section>
 
+    <!-- WHY IDS -->
+
+    <section class="why-ids">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 why-ids__info col-12 pr-0">
+                    <h1 class="section-title" id='why-ids'>
+                        Why<span>IDS?</span>
+                    </h1>
+                    <p>We respond to all your systems defects complains during the full
+                        duration of your subscription.</p>
+                    <p>
+                        We give optimum systems solutions and most efficient designs
+                        for any building type.
+                    </p>
+                    <p>
+                        We utilize our vast experiences and commitment to care so that
+                        you get the best reliable solutions.
+                    </p>
+                    <p>
+                        As our preferred Lounge Member, you will receive full drawings,
+                        specifications and vendor list for each solution of your requirement.
+                    </p>
+                    <p>
+                        Our Lounge subscription provides a range of complete services to
+                        choose from, all in the sake of the comfort and satisfaction of your
+                        home/work.
+                    </p>
+                </div>
+                <div class="col-sm-4 col-12 why-ids__img-col pl-0">
+                    <img src="img/Group%2078.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- SUBSCRIBE SECTION -->
     
     <section class="subscribe" id="subscribe">
