--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 
     <section class="why-ids">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-8 why-ids__info col-12 pr-0">
+            <div class="row justify-content-between">
+                <div class="col-sm-7 why-ids__info col-12 pr-0">
                     <h1 class="section-title" id='why-ids'>
                         Why<span>IDS?</span>
                     </h1>
