--- a/pay.html
+++ b/pay.html
@@ -169,6 +169,9 @@
                             <button class="save-btn main-btn">
                                 Next
                             </button>
+                            <p class="auth-copyright position-relative">
+                                Copy Rights TWINSOFT 2020, All Rights Reserved
+                            </p>
                             </div>
 
                             <!-- SUBSCRIBE SECTION STEP 2 -->
@@ -197,11 +200,11 @@
                             <button class="save-btn main-btn">
                                 Save
                             </button>
+                            <p class="auth-copyright">
+                                Copy Rights TWINSOFT 2020, All Rights Reserved
+                            </p>
                             </div>
                     </form>
-                    <p class="auth-copyright position-relative">
-                        Copy Rights TWINSOFT 2020, All Rights Reserved
-                    </p>
                 </div>
             </div>
         </div>
