--- a/sign-in.html
+++ b/sign-in.html
@@ -111,11 +111,11 @@
                             Sign Up
                         </a>
                     </div>
+                    <p class="auth-copyright">
+                        Copy Rights TWINSOFT 2020, All Rights Reserved
+                    </p>
                 </div>
             </div>
-            <p class="auth-copyright position-relative">
-                Copy Rights TWINSOFT 2020, All Rights Reserved
-            </p>
         </div>
     </main>
 
