--- a/pay.html
+++ b/pay.html
@@ -169,7 +169,7 @@
                             <button class="save-btn main-btn">
                                 Next
                             </button>
-                            <p class="auth-copyright position-relative">
+                            <p class="auth-copyright">
                                 Copy Rights TWINSOFT 2020, All Rights Reserved
                             </p>
                             </div>
