--- a/sign-up.html
+++ b/sign-up.html
@@ -174,7 +174,7 @@
                             <button class="save-btn main-btn" onclick='redirectPay()'>
                                 Sign Up
                             </button>
-                            <p class="auth-copyright position-relative">
+                            <p class="auth-copyright">
                                 Copy Rights TWINSOFT 2020, All Rights Reserved
                             </p>
                         </div>
@@ -239,7 +239,7 @@
                             <div class="agree-policy">
                                 By joining, You agree to <a href='javascript:void(0)'>Terms conditions</a> and <a href='javascript:void(0)'>Privacy Policy</a>.
                             </div>
-                            <p class="auth-copyright position-relative">
+                            <p class="auth-copyright">
                                 Copy Rights TWINSOFT 2020, All Rights Reserved
                             </p>
                             </div>
