--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 
     <!-- HEADER -->
     <header class="header" id='home'>
-        <div class="container">
             <div class="top-bar">
                 <div class="row top-bar__row">
                     <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
@@ -51,6 +50,9 @@
                             </li>
                             <li>
                                 <a href="#how-it-works">How it works</a>
+                            </li>
+                            <li>
+                                <a href="#get-a-quote">Get a quote</a>
                             </li>
                             <li>
                                 <a href="#clients-feedback">Clients</a>
@@ -84,7 +86,7 @@
                 </div>
                 <div class="header-benefits__block">
                     <img src="img/header-2.svg" alt="Wealth Care Image">
-                    <span>Health Care</span>
+                    <span>Wealth Care</span>
                     <p>
                         Economic, Smapt Power Saving<br>
                         Electrical & Control Systems
@@ -99,7 +101,6 @@
                     </p>
                 </div>
             </div>
-        </div>
     </header>
 
     <!-- WHO WE ARE SECTION -->
@@ -107,7 +108,7 @@
     <section class="who-we-are">
         <div class="container">
             <h1 class="section-title" id="who-we-are">
-                Who <span>we</span> are?
+                Who <span>we</span> are
             </h1>
             <p class="section-description">
                 Invictus has been established to implement the experience gained over 40 years in the electromechanical building services
@@ -119,7 +120,7 @@
                 <img src="img/christopher-burns-wiu-3-w-99-t-ng-unsplash.png" alt="who we are image">
                 <img src="img/american-public-power-association-f-h-ld-xf-ur-dh-a-unsplash.png" alt="who we are image">
             </div>
-        </div><
+        </div>
     </section>
 
     <!-- MASONRY GALLERY SECTION -->
@@ -139,7 +140,7 @@
                     <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
                 </div>
                 <div class="col-sm-4 col-12 masonry-gallery__col">
-                    <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
+                    <img src="img/martin-adams-a-pdpu-pu-nz-8-unsplash.png" alt="masonry gallery image">
                     <h3 class="masonry-gallery__title">
                         <span>IDS</span> Participate
                     </h3>
@@ -159,7 +160,7 @@
                         health care buildings where specific systems 
                         & requirements are required.
                     </p>
-                    <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
+                    <img src="img/phil-desforges-ow-1-m-ml-1-s-oi-0-unsplash.png" alt="masonry gallery image">
                 </div>
             </div>
         </div>
@@ -178,19 +179,19 @@
                 <div class="services-slider__block">
                     <img src="img/max-rovensky-n-2-o-ybg-sc-dq-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
-                        Full MEP Works
+                        Full MEP
                     </p>
                 </div>
                 <div class="services-slider__block">
                     <img src="img/sergei-akulich-h-fbfc-5-ym-ick-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
-                        Air Conditioning Works
+                        Air Conditioning
                     </p>
                 </div>
                 <div class="services-slider__block">
                     <img src="img/charlota-blunarova-o-by-y-sqy-e-tho-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
-                        Plumbing Works
+                        Plumbing
                     </p>
                 </div>
                 <div class="services-slider__block">
