--- a/sign-up.html
+++ b/sign-up.html
@@ -31,8 +31,7 @@
 
     <!-- HEADER -->
     <header class="header" id='home'>
-        <div class="container">
-            <div class="top-bar">
+        <div class="top-bar">
                 <div class="row top-bar__row">
                     <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
                         <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
@@ -55,6 +54,9 @@
                                 <a href="index.html#how-it-works">How it works</a>
                             </li>
                             <li>
+                                <a href="index.html#get-a-quote">Get a quote</a>
+                            </li>
+                            <li>
                                 <a href="index.html#clients-feedback">Clients</a>
                             </li>
                             <li>
@@ -72,7 +74,6 @@
                     <span></span>
                 </button>
             </div>
-        </div>
     </header>
 
     <!-- AUTH MAIN -->
