--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-sm-7 why-ids__info col-12 pr-0">
-                    <h1 class="section-title" id='why-ids'>
+                    <h1 class="section-title" id='get-a-quote'>
                         Why<span> IDS?</span>
                     </h1>
                     <p>We respond to all your systems defects complains during the full
