--- a/sign-in.html
+++ b/sign-in.html
@@ -28,53 +28,54 @@
 </head>
 <body class='auth'>
 
-    <!-- HEADER -->
-    <header class="header" id='home'>
-        <div class="container">
-            <div class="top-bar">
-                <div class="row top-bar__row">
-                    <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
-                        <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
-                    </div>
-                    <nav class="col-lg-8 col-md-8 col-12 top-bar__row-col__nav">
-                        <ul>
-                            <li>
-                                <a href="index.html#home">Home</a>
-                            </li>
-                            <li>
-                                <a href="index.html#who-we-are">About us</a>
-                            </li>
-                            <li>
-                                <a href="index.html#masonry-gallery">What we do</a>
-                            </li>
-                            <li>
-                                <a href="index.html#services">Services</a>
-                            </li>
-                            <li>
-                                <a href="index.html#how-it-works">How it works</a>
-                            </li>
-                            <li>
-                                <a href="index.html#clients-feedback">Clients</a>
-                            </li>
-                            <li>
-                                <a href="index.html#contact-us">Contact us</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="col-lg-2 col-md-2 col-4 pr-5 top-bar__row-col__auth">
-                        <a href='sign-in.html' class="sign-in-btn">
-                            Sign In
-                        </a>
-                    </div>
-                </div>
-                <button class="burger-menu">
-                    <span></span>
-                </button>
+<!-- HEADER -->
+<header class="header" id='home'>
+    <div class="top-bar">
+        <div class="row top-bar__row">
+            <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
+                <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
+            </div>
+            <nav class="col-lg-8 col-md-8 col-12 top-bar__row-col__nav">
+                <ul>
+                    <li>
+                        <a href="index.html#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="index.html#who-we-are">About us</a>
+                    </li>
+                    <li>
+                        <a href="index.html#masonry-gallery">What we do</a>
+                    </li>
+                    <li>
+                        <a href="index.html#services">Services</a>
+                    </li>
+                    <li>
+                        <a href="index.html#how-it-works">How it works</a>
+                    </li>
+                    <li>
+                        <a href="index.html#get-a-quote">Get a quote</a>
+                    </li>
+                    <li>
+                        <a href="index.html#clients-feedback">Clients</a>
+                    </li>
+                    <li>
+                        <a href="index.html#contact-us">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="col-lg-2 col-md-2 col-4 pr-5 top-bar__row-col__auth">
+                <a href='sign-in.html' class="sign-in-btn">
+                    Sign In
+                </a>
             </div>
         </div>
-    </header>
+        <button class="burger-menu">
+            <span></span>
+        </button>
+    </div>
+</header>
 
-    <!-- AUTH MAIN -->
+<!-- AUTH MAIN -->
 
     <main class='auth-main sign-in-main'>
         <div class="container">
