--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                                 <a href="#services">Services</a>
                             </li>
                             <li>
+                                <a href="#why-ids">Why IDS</a>
+                            </li>
+                            <li>
                                 <a href="#how-it-works">How it works</a>
                             </li>
                             <li>
@@ -62,9 +65,12 @@
                             </li>
                         </ul>
                     </nav>
-                    <div class="col-lg-2 col-md-2 col-4 pr-5 top-bar__row-col__auth">
+                    <div class="col-lg-2 d-flex text-right flex-column col-md-2 col-4 pr-5 top-bar__row-col__auth">
                         <a href='sign-in.html' class="sign-in-btn">
                             Sign In
+                        </a>
+                        <a href="get-a-quote.html" class="qet-quote-btn">
+                            Get a quote
                         </a>
                     </div>
                 </div>
@@ -120,49 +126,46 @@
                 <img src="img/christopher-burns-wiu-3-w-99-t-ng-unsplash.png" alt="who we are image">
                 <img src="img/american-public-power-association-f-h-ld-xf-ur-dh-a-unsplash.png" alt="who we are image">
             </div>
-        </div>
-    </section>
+            <!-- MASONRY GALLERY SECTION -->
 
-    <!-- MASONRY GALLERY SECTION -->
-
-    <section class="masonry-gallery" id="masonry-gallery">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-4 col-12 masonry-gallery__col">
-                    <h3 class="masonry-gallery__title">
-                        <span>IDS</span> Vision
-                    </h3>
-                    <p class="masonry-gallery__description">
-                        Is to give right systems solution to fit in every 
-                        different application whether its your home, 
-                        office, project, industrial facilities.
-                    </p>
-                    <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
+            <section class="masonry-gallery" id="masonry-gallery">
+                <div class="row">
+                    <div class="col-sm-4 col-12 masonry-gallery__col">
+                        <h3 class="masonry-gallery__title">
+                            <span>IDS</span> Vision
+                        </h3>
+                        <p class="masonry-gallery__description">
+                            Is to give right systems solution to fit in every
+                            different application whether its your home,
+                            office, project, industrial facilities.
+                        </p>
+                        <img src="img/john-towner-b-zxq-6-z-umqkw-unsplash.png" alt="masonry gallery image">
+                    </div>
+                    <div class="col-sm-4 col-12 masonry-gallery__col">
+                        <img src="img/martin-adams-a-pdpu-pu-nz-8-unsplash.png" alt="masonry gallery image">
+                        <h3 class="masonry-gallery__title">
+                            <span>IDS</span> Mission
+                        </h3>
+                        <p class="masonry-gallery__description">
+                            In new constructions, renovations or existing
+                            buildings with technical problems that were
+                            born previously with the construction of these
+                            applications
+                        </p>
+                    </div>
+                    <div class="col-sm-4 col-12 masonry-gallery__col">
+                        <h3 class="masonry-gallery__title">
+                            <span>IDS</span> Exprience
+                        </h3>
+                        <p class="masonry-gallery__description">
+                            Covers all residential, commercial, industrial,
+                            health care buildings where specific systems
+                            & requirements are required.
+                        </p>
+                        <img src="img/phil-desforges-ow-1-m-ml-1-s-oi-0-unsplash.png" alt="masonry gallery image">
+                    </div>
                 </div>
-                <div class="col-sm-4 col-12 masonry-gallery__col">
-                    <img src="img/martin-adams-a-pdpu-pu-nz-8-unsplash.png" alt="masonry gallery image">
-                    <h3 class="masonry-gallery__title">
-                        <span>IDS</span> Participate
-                    </h3>
-                    <p class="masonry-gallery__description">
-                        In new constructions, renovations or existing 
-                        buildings with technical problems that were 
-                        born previously with the construction of these
-                        applications
-                    </p>
-                </div>
-                <div class="col-sm-4 col-12 masonry-gallery__col">
-                    <h3 class="masonry-gallery__title">
-                        <span>IDS</span> Exprience
-                    </h3>
-                    <p class="masonry-gallery__description">
-                        Covers all residential, commercial, industrial,
-                        health care buildings where specific systems 
-                        & requirements are required.
-                    </p>
-                    <img src="img/phil-desforges-ow-1-m-ml-1-s-oi-0-unsplash.png" alt="masonry gallery image">
-                </div>
-            </div>
+            </section>
         </div>
     </section>
 
@@ -174,39 +177,39 @@
                 <span>IDS</span> Services
             </h1>
         </div>
-        <div class="services__container">
-            <div class="services-slider">
-                <div class="services-slider__block">
+        <div class="services__container mb-5">
+            <div class="row">
+                <div class="services-slider__block col-lg-4 col-sm-6 col-12">
                     <img src="img/max-rovensky-n-2-o-ybg-sc-dq-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Full MEP
                     </p>
                 </div>
-                <div class="services-slider__block">
+                <div class="services-slider__block col-lg-4 col-sm-6 col-12">
                     <img src="img/sergei-akulich-h-fbfc-5-ym-ick-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Air Conditioning
                     </p>
                 </div>
-                <div class="services-slider__block">
+                <div class="services-slider__block col-lg-4 col-sm-6 col-12">
                     <img src="img/charlota-blunarova-o-by-y-sqy-e-tho-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Plumbing
                     </p>
                 </div>
-                <div class="services-slider__block">
+                <div class="services-slider__block col-lg-4 col-sm-6 col-12">
                     <img src="img/150304-jhe-chua-chay.png" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Fire Fighting Works
                     </p>
                 </div>
-                <div class="services-slider__block">
+                <div class="services-slider__block col-lg-4 col-sm-6 col-12">
                     <img src="img/sergei-akulich-h-fbfc-5-ym-ick-unsplash.png" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Electrical Works
                     </p>
                 </div>
-                <div class="services-slider__block">
+                <div class="services-slider__block col-lg-4 col-sm-6 col-12">
                     <img src="img/images.jpg" alt="Services slider image">
                     <p class="services-slider__block-description">
                         Light current & Controls
@@ -222,7 +225,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-sm-7 why-ids__info col-12 pr-0">
-                    <h1 class="section-title" id='get-a-quote'>
+                    <h1 class="section-title" id='why-ids'>
                         Why<span> IDS?</span>
                     </h1>
                     <p>We respond to all your systems defects complains during the full
