--- a/sign-in.html
+++ b/sign-in.html
@@ -50,10 +50,10 @@
                         <a href="index.html#services">Services</a>
                     </li>
                     <li>
-                        <a href="index.html#how-it-works">How it works</a>
+                        <a href="index.html#why-ids">Why IDS</a>
                     </li>
                     <li>
-                        <a href="index.html#get-a-quote">Get a quote</a>
+                        <a href="index.html#how-it-works">How it works</a>
                     </li>
                     <li>
                         <a href="index.html#clients-feedback">Clients</a>
@@ -63,9 +63,12 @@
                     </li>
                 </ul>
             </nav>
-            <div class="col-lg-2 col-md-2 col-4 pr-5 top-bar__row-col__auth">
+            <div class="col-lg-2 col-md-2 col-4 pr-5 d-flex text-right flex-column top-bar__row-col__auth">
                 <a href='sign-in.html' class="sign-in-btn">
                     Sign In
+                </a>
+                <a href="get-a-quote.html" class="qet-quote-btn">
+                    Get a quote
                 </a>
             </div>
         </div>
