--- a/sign-up.html
+++ b/sign-up.html
@@ -27,56 +27,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body class='auth'>
+<body id="full-page" class='auth'>
 
-    <!-- HEADER -->
-    <header class="header" id='home'>
-        <div class="top-bar">
-                <div class="row top-bar__row">
-                    <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
-                        <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
-                    </div>
-                    <nav class="col-lg-8 col-md-8 col-12 top-bar__row-col__nav">
-                        <ul>
-                            <li>
-                                <a href="index.html#home">Home</a>
-                            </li>
-                            <li>
-                                <a href="index.html#who-we-are">About us</a>
-                            </li>
-                            <li>
-                                <a href="index.html#masonry-gallery">What we do</a>
-                            </li>
-                            <li>
-                                <a href="index.html#services">Services</a>
-                            </li>
-                            <li>
-                                <a href="index.html#how-it-works">How it works</a>
-                            </li>
-                            <li>
-                                <a href="index.html#get-a-quote">Get a quote</a>
-                            </li>
-                            <li>
-                                <a href="index.html#clients-feedback">Clients</a>
-                            </li>
-                            <li>
-                                <a href="index.html#contact-us">Contact us</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="col-lg-2 col-md-2 col-4 pr-5 top-bar__row-col__auth">
-                        <a href='sign-in.html' class="sign-in-btn">
-                            Sign In
-                        </a>
-                    </div>
-                </div>
-                <button class="burger-menu">
-                    <span></span>
-                </button>
+<!-- HEADER -->
+<header class="header" id='home'>
+    <div class="top-bar">
+        <div class="row top-bar__row">
+            <div class="col-lg-2 col-md-2 col-6 pl-5 top-bar__row-col__logo">
+                <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
             </div>
-    </header>
+            <nav class="col-lg-8 col-md-8 col-12 top-bar__row-col__nav">
+                <ul>
+                    <li>
+                        <a href="index.html#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="index.html#who-we-are">About us</a>
+                    </li>
+                    <li>
+                        <a href="index.html#masonry-gallery">What we do</a>
+                    </li>
+                    <li>
+                        <a href="index.html#services">Services</a>
+                    </li>
+                    <li>
+                        <a href="index.html#why-ids">Why IDS</a>
+                    </li>
+                    <li>
+                        <a href="index.html#how-it-works">How it works</a>
+                    </li>
+                    <li>
+                        <a href="index.html#clients-feedback">Clients</a>
+                    </li>
+                    <li>
+                        <a href="index.html#contact-us">Contact us</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="col-lg-2 col-md-2 col-4 pr-5 d-flex text-right flex-column top-bar__row-col__auth">
+                <a href='sign-in.html' class="sign-in-btn">
+                    Sign In
+                </a>
+                <a href="get-a-quote.html" class="qet-quote-btn">
+                    Get a quote
+                </a>
+            </div>
+        </div>
+        <button class="burger-menu">
+            <span></span>
+        </button>
+    </div>
+</header>
 
-    <!-- AUTH MAIN -->
+<!-- AUTH MAIN -->
 
     <main class='auth-main sign-up-main'>
         <div class="container">
@@ -261,5 +264,6 @@
     <script src='scripts/sign-up.js'></script>
     <script src='scripts/input-pass.js'></script>
     <script src='scripts/select.js'></script>
+    <script src="scripts/fullpage.js"></script>
 </body>
 </html>
